# Isa-Compiler

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh  build_windows.sh  flags.hpp  macro.cpp  main.cpp  nametoken.hpp  out.ll  toolchain-windows.cmake
Isa-Code/: init.isa
cmake/linux/: CMakeLists.txt
cmake/windows/: CMakeLists.txt
lexer/: lexer.cpp  lexer.hpp  token.hpp
lib/: println.c  println.ll
parser/: ast.hpp  parser.hpp
src/: ast.cpp  ast.hpp  err.cpp  err.hpp  file.hpp  flags.hpp  lexer.cpp  lexer.hpp  main.cpp  nametoken.hpp  parser.cpp  parser.hpp  parser_ast.cpp  parser_ast.hpp  parserc.cpp  token.hpp  type_render_ast.hpp  variable_declaration.cpp
src/errors/: err.cpp  err.hpp
src/frontend/lexer/: lexer.cpp  lexer.hpp  token.hpp
src/frontend/parser/: ast.cpp  ast.hpp  parser.cpp  parser.hpp  parser_ast.hpp  parserc.hpp
src/frontend/parser/common/: parserc.cpp
src/frontend/utils/: file.hpp  initialized_flags.hpp  progress.hpp  results.hpp  type_render_ast.hpp  utils_str.hpp
tests/: aloca.isa  arena.isa  atomic.isa  class.isa  dialeto.isa  ex.isa  exemplo.isa  expre.isa  for.isa  for.json  fun.cpp  fun.isa  fun.json  hello.isa  if.isa  info.isa  isa.json  macros.isa  main.isa  memory.isa  multi_threads.isa  raylib.isa  soma.isa  test.isa  var.isa  var.json  vec3.isa  while.isa
tests/ir/: fun.ll  fun_oti.ll  test.ll
